--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -9,6 +9,14 @@
   publisher={The Royal Society London}
 }
 
+@article{burkner2017brms,
+  title={brms: An R package for Bayesian multilevel models using Stan},
+  author={B{\"u}rkner, Paul-Christian},
+  journal={Journal of statistical software},
+  volume={80},
+  pages={1--28},
+  year={2017}
+}
 
 
 @article{holland2020accuracy,
@@ -5654,4 +5662,12 @@ year={2023},
 howpublished={Presentation},
 booktitle={Annual conference of the New Zealand Studies Association},
 address={University of Stockholm and University of Turku}
+}
+
+@misc{UN_pop,
+author={{United Nations, Department of Economic and Social Affairs, Population Division}},
+year = {2022},
+url={https://population.un.org/wpp/Download/Standard/MostUsed/},
+title={World Population Prospects 2022},
+    note = {Online Edition}
 }
